kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: athena-ingress
spec:
  rules:
  - host: athena.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: athena-create
            port:
              number: 8004
